see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, 1.7 and 2.5, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

19-Jul-2013 Jean-Marie Simonet
 # Performance bug - Initial patch partially reverted  2.5 Fix (Regression)/ Thanks Thomas Hunziker

17-Jul-2013 Jean-Marie Simonet
# [#31477] Remove unneeded GROUP BY and fix duplicate article display. Thanks Thomas Hunziker

06-Jul-2013 Jean-Marie Simonet
 $ [#31290] Add Debug User Group Help Screen language string. Thanks George Wilson
 # [#31348] Regression for plugin filter search with spaces in the title. Reverting
 # [#27935] 'Next' button not working on first try after login in com_users. Thanks Antonio Durán Terrés and Brian Teeman

01-Jul-2013 Jean-Marie Simonet
 # [#31280] Loadmodule support for htmlspecialchars in title. Thanks Peter Wiseman
 
13-Jun-2013 Jean-Marie Simonet
 # [#31108] Fatal erorr right after install. Thanks Klas and Michael Babker
 # [#31120] [2.5] *plug-in manager search give errors and warning for '/','*' and '\
 # [#30354] Invalid Javascript Redirect in JApplication::redirect() when headers have already been sent. Thanks Ben Tasker.
 $ [#26548] [patch] incorrect error check in menus.php. Thanks Rob Clayburn and Ben Tasker
 # [#30150] com_content loads articles before error checking. Thanks Richard McDaniel.

07-Jun-2013 Jean-Marie Simonet
 + [#31106] Added Belgian flag for mod_languages. Thanks Fonny Smets 

24-May-2013 Michael Babker
 # [#30994] Untranslated String.  Thanks Jean-Marie Simonet

24-May-2013 Jean-Marie Simonet
 # [#30945] Wrong error when folder creation not possible due to permissions. Thanks Phil Taylor

19-May-2013 Michael Babker