@@ -44,7 +44,7 @@
 		<field
 			name="useractivation"
 			type="list"
-			default="1"
+			default="2"
 			label="COM_USERS_CONFIG_FIELD_USERACTIVATION_LABEL"
 			description="COM_USERS_CONFIG_FIELD_USERACTIVATION_DESC">
 			<option
@@ -58,7 +58,7 @@
 		<field
 			name="mail_to_admin"
 			type="radio"
-			default="0"
+			default="1"
 			label="COM_USERS_CONFIG_FIELD_MAILTOADMIN_LABEL"
 			description="COM_USERS_CONFIG_FIELD_MAILTOADMIN_DESC">
 			<option
