@@ -26,6 +26,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+21-Jul-2013 Mark Dexter
+ ^ [#31319] registration option disabled by default is safer. Thanks Brian Teeman.
+
 19-Jul-2013 Jean-Marie Simonet
  # Performance bug - Initial patch partially reverted  2.5 Fix (Regression)/ Thanks Thomas Hunziker
 
